ready for the first review

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="page">
   <header class="header">
     <a href="#">
-      <img class="header__logo" src="./images/header-logo.svg" alt="Логотип, Россия" target="_blank">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Логотип, Россия">
     </a>
     <div class="header__lang-links">
       <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
@@ -38,7 +38,7 @@
       </ul>
     </section>
 
-    <section class="photo-grid content__section">
+    <section class="photo-grid content__section" aria-label="Галерея фотографий природы">
       <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид на водоем из окна поезда">
       <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы в облаках">
       <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на стоге сена в поле">
